force-app/main/default/objects/Appeals_Grievances__c/Appeals_Grievances__c.object-meta.xml
<CustomObject>
    <label>Appeals &amp; Grievances</label>
    <pluralLabel>Appeals &amp; Grievances</pluralLabel>
    <nameField>
        <label>Appeals &amp; Grievances Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>