force-app/main/default/objects/Appeals_Grievances__c/fields/AG_Case__c.field-meta.xml
<CustomField>
    <fullName>AG_Case__c</fullName>
    <label>A&amp;G Case</label>
    <type>MasterDetail</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Appeals &amp; Grievances</relationshipLabel>
    <relationshipName>Appeals_Grievances</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>