force-app/main/default/objects/Appeals_Grievances__c/fields/AOR_Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>AOR_Effective_End_Date__c</fullName>
    <label>AOR Effective End Date</label>
    <type>Date</type>
</CustomField>