force-app/main/default/objects/Appeals_Grievances__c/fields/AOR_Form_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>AOR_Form_Received_Date__c</fullName>
    <label>AOR Form Received Date</label>
    <type>DateTime</type>
</CustomField>