force-app/main/default/objects/Appeals_Grievances__c/fields/AOR_Required__c.field-meta.xml
<CustomField>
    <fullName>AOR_Required__c</fullName>
    <label>AOR Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>