force-app/main/default/objects/Appeals_Grievances__c/fields/AOR_Valid__c.field-meta.xml
<CustomField>
    <fullName>AOR_Valid__c</fullName>
    <label>AOR Valid</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>