force-app/main/default/objects/Appeals_Grievances__c/fields/Appealant__c.field-meta.xml
<CustomField>
    <fullName>Appealant__c</fullName>
    <label>Appealant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Provider</fullName>
            </value>
            <value>
                <fullName>Authorized Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>