force-app/main/default/objects/Appeals_Grievances__c/fields/Associated_Case_Id__c.field-meta.xml
<CustomField>
    <fullName>Associated_Case_Id__c</fullName>
    <label>Associated Case Id</label>
    <type>Text</type>
    <length>255</length>
</CustomField>