force-app/main/default/objects/Appeals_Grievances__c/fields/Associated_Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Associated_Case_Type__c</fullName>
    <label>Associated Case Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prior Auth</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>