force-app/main/default/objects/Appeals_Grievances__c/fields/Authorization_ID__c.field-meta.xml
<CustomField>
    <fullName>Authorization_ID__c</fullName>
    <label>Authorization ID</label>
    <type>Text</type>
    <length>255</length>
</CustomField>