force-app/main/default/objects/Appeals_Grievances__c/fields/Case_Category__c.field-meta.xml
<CustomField>
    <fullName>Case_Category__c</fullName>
    <label>Case Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Grievance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>