force-app/main/default/objects/Appeals_Grievances__c/fields/Case_Creation_Date__c.field-meta.xml
<CustomField>
    <fullName>Case_Creation_Date__c</fullName>
    <label>Case Creation Date</label>
    <type>DateTime</type>
</CustomField>