force-app/main/default/objects/Appeals_Grievances__c/fields/Case_sub_category__c.field-meta.xml
<CustomField>
    <fullName>Case_sub_category__c</fullName>
    <label>Case sub-category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sub-Category 1</fullName>
            </value>
            <value>
                <fullName>Sub-Category 2</fullName>
            </value>
            <value>
                <fullName>Sub-Category 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>