force-app/main/default/objects/Appeals_Grievances__c/fields/Case_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Case_Urgency__c</fullName>
    <label>Case Urgency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Expedited</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>