force-app/main/default/objects/Appeals_Grievances__c/fields/Complaint_Category__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Category__c</fullName>
    <label>Complaint Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment / Disenrollment</fullName>
            </value>
            <value>
                <fullName>Benefit Design</fullName>
            </value>
            <value>
                <fullName>Administrative / Processing</fullName>
            </value>
            <value>
                <fullName>Marketing / Sales</fullName>
            </value>
            <value>
                <fullName>Access to Care</fullName>
            </value>
            <value>
                <fullName>Pharmacy / Part D</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Payment / Claims</fullName>
            </value>
            <value>
                <fullName>Quality of Care (QOC)</fullName>
            </value>
            <value>
                <fullName>Lead / Program Integrity</fullName>
            </value>
            <value>
                <fullName>Clinical / Medical Necessity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>