force-app/main/default/objects/Appeals_Grievances__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Appeal</fullName>
            </value>
            <value>
                <fullName>Grievance</fullName>
            </value>
            <value>
                <fullName>Coverage Determination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>