force-app/main/default/objects/Appeals_Grievances__c/fields/Good_Cause_Reason__c.field-meta.xml
<CustomField>
    <fullName>Good_Cause_Reason__c</fullName>
    <label>Good Cause Reason</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>