force-app/main/default/objects/Appeals_Grievances__c/fields/Good_Cause_Required__c.field-meta.xml
<CustomField>
    <fullName>Good_Cause_Required__c</fullName>
    <label>Good Cause Required</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>