force-app/main/default/objects/Appeals_Grievances__c/fields/Initial_Determination_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Determination_Closure_Date__c</fullName>
    <label>Initial Determination Closure Date</label>
    <type>Date</type>
</CustomField>