force-app/main/default/objects/Appeals_Grievances__c/fields/Intake_Channel__c.field-meta.xml
<CustomField>
    <fullName>Intake_Channel__c</fullName>
    <label>Intake Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mail</fullName>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Call</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>