force-app/main/default/objects/Appeals_Grievances__c/fields/Justification_for_Urgency__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Urgency__c</fullName>
    <label>Justification for Urgency</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>