force-app/main/default/objects/Appeals_Grievances__c/fields/Late_Filing__c.field-meta.xml
<CustomField>
    <fullName>Late_Filing__c</fullName>
    <label>Late Filing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>