force-app/main/default/objects/Appeals_Grievances__c/fields/Member_Account__c.field-meta.xml
<CustomField>
    <fullName>Member_Account__c</fullName>
    <label>Member Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Appeals &amp; Grievances Cases</relationshipLabel>
    <relationshipName>Appeals_Grievances_Cases</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>