force-app/main/default/objects/Appeals_Grievances__c/fields/Member_Narrative__c.field-meta.xml
<CustomField>
    <fullName>Member_Narrative__c</fullName>
    <label>Member Narrative</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>