force-app/main/default/objects/Appeals_Grievances__c/fields/Primary_Diagnosis_ICD10__c.field-meta.xml
<CustomField>
    <fullName>Primary_Diagnosis_ICD10__c</fullName>
    <label>Primary Diagnosis (ICD-10)</label>
    <type>Text</type>
    <length>100</length>
</CustomField>