force-app/main/default/objects/Appeals_Grievances__c/fields/Provider_NPI__c.field-meta.xml
<CustomField>
    <fullName>Provider_NPI__c</fullName>
    <label>Provider NPI</label>
    <type>Text</type>
    <length>20</length>
</CustomField>