force-app/main/default/objects/Appeals_Grievances__c/fields/Reference_AG_Case__c.field-meta.xml
<CustomField>
    <fullName>Reference_AG_Case__c</fullName>
    <label>Reference A&amp;G Case</label>
    <type>Lookup</type>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Reference Appeals &amp; Grievances</relationshipLabel>
    <relationshipName>Reference_Appeals_Grievances</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>