force-app/main/default/objects/Appeals_Grievances__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category 1</fullName>
            </value>
            <value>
                <fullName>Category 2</fullName>
            </value>
            <value>
                <fullName>Category 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>