force-app/main/default/objects/Appeals_Grievances__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type 1</fullName>
            </value>
            <value>
                <fullName>Type 2</fullName>
            </value>
            <value>
                <fullName>Type 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>