force-app/main/default/objects/Appeals_Grievances__c/fields/Valid_AOR_Form_Missing__c.field-meta.xml
<CustomField>
    <fullName>Valid_AOR_Form_Missing__c</fullName>
    <label>Valid AOR Form Missing</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
</CustomField>